# project_MPC

./: .env.dev  .env.prod  .gitignore  CHANGELOG.md  README.md  RESUMO_GITHUB_SAVE.md  check.sh  docker-compose.suricata.yml  docker-compose.yml  send.sh  tmp_backup_telegraf_conf  tmp_test_eve.json  tmp_test_telegraf.conf
Oraculo/: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt  send_to_oraculo.py
Oraculo/app/: config.py  main.py
Oraculo/app/application/: classification_service.py  firewall_service.py  messenger_service.py  package_service.py
Oraculo/app/data/models/calibrate/: csv_vs_parquet_map.py  reduce_mem.py  schema_check.py  schema_comparison.bak  schema_parquet.py
Oraculo/app/data/models/experts/Benign/: model_lstm_Benign.h5
Oraculo/app/data/models/experts/Bot/: model_attention_Bot.h5
Oraculo/app/data/models/experts/Brute Force -Web/: model_cnn_Brute Force -Web.h5
Oraculo/app/data/models/experts/Infilteration/: model_lstm_Infilteration.h5
Oraculo/app/data/models/gate/: model_mlp_residual.h5
Oraculo/app/data/preprocessor/: pipeline.pkl
Oraculo/app/data/rules/: block.json
Oraculo/app/domain/entities/: predictor.py
Oraculo/app/domain/entities/loggers/: metrics.py  models.py  terminal.py
Oraculo/app/infrastructure/adapters/: message_broker.py  pfsense_client.py
Oraculo/app/infrastructure/database/: in_memory_database.py  logstash_producer.py
Oraculo/app/infrastructure/rest/: app.py
Oraculo/app/infrastructure/rest/controllers/: package_controller.py
Oraculo/app/infrastructure/rest/templates/: index.html
Oraculo/app/interfaces/: messenger.py  rest_client.py
Oraculo/app/interfaces/extensions/loggers/: metrics.py  models.py
Oraculo/app/interfaces/repositories/: package_repository.py
Oraculo/app/moe/: README.md  __init__.py  requirements.txt
Oraculo/app/moe/src/: data_preprocessing.py  experts_selection.py  models.py  train.py  utils.py
Oraculo/app/moe/src/experts/: expert_data.py  expert_train.py
Oraculo/app/moe/src/moe/: __init__.py  calibration.py  evaluation.py  gating_strategies.py  losses.py  predictors.py  trainers.py
Oraculo/docs/: CONTRIBUTING.md
(+72 files in other folders)
